@@ -1315,14 +1315,15 @@ generate_image (const char *dir, const char *prefix,
       /* fwstart.img is the only part which can't be tested by using *-elf
 	 target. Check it against the checksum. */
       const grub_uint8_t yeeloong_fwstart_good_hash[512 / 8] = 
-	{ 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-	  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-	  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-	  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-	  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-	  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-	  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-	  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 };
+	{ 
+	  0x11, 0x7f, 0xfd, 0x7e, 0xd9, 0xbb, 0x82, 0xe7,
+	  0x5f, 0xcc, 0xbf, 0x09, 0x1d, 0xfe, 0xfa, 0xd5,
+	  0x97, 0xfb, 0xbb, 0xd8, 0x76, 0x4b, 0xfc, 0x0a,
+	  0x4e, 0x3c, 0x91, 0x06, 0x98, 0xa0, 0xe0, 0xda,
+	  0x4f, 0x74, 0x17, 0x6f, 0x95, 0xd2, 0xec, 0x1b,
+	  0x7f, 0x12, 0x80, 0x23, 0xcb, 0xa0, 0x2d, 0x59,
+	  0x15, 0x82, 0x70, 0x3d, 0x23, 0xbf, 0xee, 0x93,
+	  0x5e, 0x5c, 0xbd, 0x1c, 0x51, 0x0b, 0x0b, 0x45 };
       const grub_uint8_t fuloong2f_fwstart_good_hash[512 / 8] = 
 	{ 
 	  0x76, 0x9b, 0xad, 0x6e, 0xa2, 0x39, 0x47, 0x62,
